objects/ccrz__E_ContactAddr__c.object
<CustomObject>
    <description>Used to store address information.  Associated with Carts, Orders, Invoices, Subscriptions, Payments, etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Contact Addresss</relationshipLabel>
        <relationshipName>CC_Contact_Addresss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMS_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMS Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOLT_Operating_Unit__c</fullName>
        <description>To store the BOLT Operating Unit value from Customer Master</description>
        <label>BOLT Operating Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, its an active address else address is inactive</description>
        <label>Bolt Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bolt_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bolt Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Main_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the field which points to Account Billing Address . This will be used in lookup for various objects like Invoice.</description>
        <label>Is Account Main Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Use_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Site is Active or Inactive for a particular BC</description>
        <label>Site Use Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__AddrReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether this address is read only.</description>
        <label>AddrReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressFirstline__c</fullName>
        <description>First line of the street address.</description>
        <label>Address Firstline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressSecondline__c</fullName>
        <description>Second line of the street address.</description>
        <label>Address Secondline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressThirdline__c</fullName>
        <description>Third line of the street address.</description>
        <label>Address Thirdline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__City__c</fullName>
        <description>City for the address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyName__c</fullName>
        <description>Company name associated with this address.</description>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ContactAddrId__c</fullName>
        <description>External unique external id used for data loading.  Not used by B2B Commerce.</description>
        <externalId>true</externalId>
        <label>Contact Addr Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CountryISOCode__c</fullName>
        <description>ISO code associated with the country.</description>
        <label>Country ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Country__c</fullName>
        <description>Descriptive country name.  Typically country ISO code is used.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DaytimePhone__c</fullName>
        <description>Main phone number for the address.</description>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__Email__c</fullName>
        <description>Email address associated with the address.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccrz__FirstName__c</fullName>
        <description>Person first name associated with the address.</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__HomePhone__c</fullName>
        <description>Secondary phone associated with the address.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__LastName__c</fullName>
        <description>Person last name associated with the address.</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MailStop__c</fullName>
        <description>MailStop</description>
        <label>Mail Stop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MiddleName__c</fullName>
        <description>Person middle name associated with the address.</description>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Partner_Id__c</fullName>
        <description>External Id used to tie the address to another system.  This id is carried through from the address book to the eventual order.</description>
        <label>Partner_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PostalCode__c</fullName>
        <description>Postal Code associated with the address.</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippingComments__c</fullName>
        <description>If the user enters any shipping comments during checkout those comments will be in this field on the shipping address associated with the order.</description>
        <label>Shipping Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__StateISOCode__c</fullName>
        <description>For US and Canadian addresses this is the two letter ISO code for the state.</description>
        <label>State ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__State__c</fullName>
        <description>For non-US or non-Canadian addresses this is the name of the state for the address.</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dbu_Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Contact Addresss</relationshipLabel>
        <relationshipName>CC_Contact_Addresss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to capture to true if the logged in customer selects the address as default address.</description>
        <label>dbu Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Formatted_AddressSecondline__c</fullName>
        <formula>IF(
NOT(ISBLANK(ccrz__AddressFirstline__c)),
ccrz__AddressFirstline__c+ &apos; &apos; ,
NULL
) +
IF(
NOT(ISBLANK(ccrz__AddressSecondline__c)),
ccrz__AddressSecondline__c+ &apos; &apos; ,
NULL
)+
IF(
NOT(ISBLANK(ccrz__City__c)),
ccrz__City__c+ &apos; &apos;,
NULL
)+
IF(
NOT(ISBLANK(ccrz__State__c)),
ccrz__State__c+ &apos;, &apos;,
NULL
)+
IF(
NOT(ISBLANK(ccrz__PostalCode__c)),
ccrz__PostalCode__c+ &apos; &apos; ,
NULL
)+
IF(NOT(ISBLANK(ccrz__Country__c)),
IF(ccrz__Country__c == &apos;US&apos;,
&apos;U.S.A.&apos;,
IF(ccrz__Country__c == &apos;CA&apos;,&apos;CA&apos;, NULL)
)+ &apos; &apos;,NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dbu_Formatted_AddressSecondline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Formatted_Address__c</fullName>
        <formula>IF(ccrz__AddressSecondline__c != &apos;&apos;,ccrz__AddressFirstline__c+&apos; &apos;+
ccrz__AddressSecondline__c+&apos; &apos;+
ccrz__City__c+&apos;, &apos;+ ccrz__State__c+&apos; &apos;+ ccrz__PostalCode__c+&apos; &apos;+
IF(ccrz__Country__c == &apos;US&apos;,&apos;U.S.A&apos;,ccrz__Country__c),
ccrz__AddressFirstline__c+&apos; &apos;+
ccrz__City__c+&apos;, &apos;+ ccrz__State__c+&apos; &apos;+ ccrz__PostalCode__c+&apos; &apos;+

IF(ccrz__Country__c == &apos;US&apos;,&apos;U.S.A&apos;,ccrz__Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Formatted_Country__c</fullName>
        <formula>IF( ccrz__Country__c == &apos;US&apos;,&apos;U.S.A.&apos;, &apos;Canada&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dbu_Formatted_Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_PickUp_Store_Name__c</fullName>
        <label>dbu PickUp Store Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_StartEndTimeOfStore__c</fullName>
        <label>dbu_StartEndTimeOfStore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State__c</fullName>
        <label>dbu State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_StoreSFId__c</fullName>
        <label>dbu_StoreSFId_ForPickupOnly</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_TimeZone__c</fullName>
        <description>This field will carry value for timezone only for pickup store</description>
        <inlineHelpText>This field will carry value for timezone only for pickup store</inlineHelpText>
        <label>dbu_TimeZone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_zone__c</fullName>
        <description>This field will be only uses in case of Pickup Store Location.</description>
        <inlineHelpText>This field will be only uses in case of Pickup Store Location.</inlineHelpText>
        <label>dbu_zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Contact Address</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__FirstName__c</columns>
        <columns>ccrz__LastName__c</columns>
        <columns>ccrz__AddressFirstline__c</columns>
        <columns>ccrz__AddressSecondline__c</columns>
        <columns>ccrz__City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <columns>NAME</columns>
        <columns>ccrz__ContactAddrId__c</columns>
        <columns>dbu_Contact__c</columns>
        <columns>ccrz__LastName__c</columns>
        <columns>ccrz__FirstName__c</columns>
        <columns>ccrz__Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Contact Addresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DisableBoltAddressUpdation</fullName>
        <active>true</active>
        <description>Disable Bolt Address Updation</description>
        <errorConditionFormula>AND(
    OR(
        ISCHANGED(Account__c),
        ISCHANGED(ccrz__AddressFirstline__c),
        ISCHANGED(ccrz__AddressSecondline__c),
        ISCHANGED(ccrz__AddressThirdline__c),
		ISCHANGED(ccrz__AddrReadOnly__c),
        ISCHANGED(Bolt_Active__c),
        ISCHANGED(BOLT_Operating_Unit__c),
        ISCHANGED(Bolt_Site__c),
		ISCHANGED(ccrz__City__c),
        ISCHANGED(ccrz__CompanyName__c),
        ISCHANGED(ccrz__ContactAddrId__c),
        ISCHANGED(ccrz__Country__c),
		ISCHANGED(ccrz__CountryISOCode__c),
        ISCHANGED(ccrz__DaytimePhone__c),
        ISCHANGED(ccrz__Email__c),
        ISCHANGED(ccrz__FirstName__c),
		ISCHANGED(ccrz__HomePhone__c),
        ISCHANGED(Is_Account_Main_Address__c),
        ISCHANGED(ccrz__LastName__c),
        ISCHANGED(ccrz__MailStop__c),
		ISCHANGED(ccrz__MiddleName__c),
        ISCHANGED(ccrz__Partner_Id__c),
        ISCHANGED(ccrz__PostalCode__c),
        ISCHANGED(ccrz__ShippingComments__c),
		ISCHANGED(Site_Use_Status__c),
        ISCHANGED(ccrz__State__c),
        ISCHANGED(ccrz__StateISOCode__c)
    ),
    Bolt_Active__c,
    Bolt_Site__c,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
   $Profile.Name &lt;&gt; &quot;CSS Integration&quot;,
$Profile.Name &lt;&gt; &quot;OSM_IT_Support_Admin&quot;
)</errorConditionFormula>
        <errorMessage>ERROR : You are not allowed to edit Bolt Address records</errorMessage>
    </validationRules>
</CustomObject>